--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "toolkit": "^1.5.4",
